--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,152 +1,152 @@
 .body {
-	font-family: "Montserrat", sans-serif;
-	background: #f5f7fa;
+  font-family: "Montserrat", sans-serif;
+  background: #f5f7fa;
 }
 
 /* main styles */
 
 .main {
-	display: flex;
-	flex-direction: row-reverse;
-	width: 1200px;
-	height: 1300px;
-	margin: auto;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 1200px;
+  height: 1300px;
+  margin: auto;
 }
 
 /* main style */
 .main-content {
-	background-color: white;
-	box-shadow: 6px 6px 20px;
-	padding: 105px 90px;
+  background-color: white;
+  box-shadow: 6px 6px 20px;
+  padding: 105px 90px;
 }
 
 /* about style */
 .about {
-	margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .about-positiun {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 17px;
-	/* identical to box height */
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
 
-	color: #000000;
-	margin-bottom: 20px;
+  color: #000000;
+  margin-bottom: 20px;
 }
 
 .about-name {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 45px;
-	line-height: 55px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 55px;
 
-	color: #683939;
-	margin-bottom: 25px;
+  color: #683939;
+  margin-bottom: 25px;
 }
 q .about-destriction {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
 
-	color: #595959;
-	width: 400px;
+  color: #595959;
+  width: 400px;
 }
 
 .title {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 22px;
-	line-height: 27px;
-	margin-bottom: 10px;
-	color: #000000;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+  margin-bottom: 10px;
+  color: #000000;
 }
 
 .project-list {
-	padding: 0;
-	margin-left: 15px;
+  padding: 0;
+  margin-left: 15px;
 }
 
 /* project styles */
 .projects {
-	margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .project-item {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 24px;
-	color: #000000;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000000;
 }
 .project-link {
-	margin-left: 15px;
+  margin-left: 15px;
 }
 
 .project,
 .project-link {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	color: #595959;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #595959;
 }
 .project-bracket {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 24px;
-	color: #000000;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000000;
 }
 
 /* work  */
 .work {
 }
 .position-work {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 20px;
-	color: #000000;
-	margin-bottom: 10px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  margin-bottom: 10px;
 }
 .organazation {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 20px;
-	color: #fb6d3a;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fb6d3a;
 }
 
 .period {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 15px;
-	color: #a8a8a8;
-	margin-bottom: 10px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #a8a8a8;
+  margin-bottom: 10px;
 }
 
 .line {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 15px;
-	color: #000000;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
 }
 .work-list {
-	padding: 0;
-	margin-left: 15px;
+  padding: 0;
+  margin-left: 15px;
 }
 
 .work-list-item {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	color: #595959;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #595959;
 }
 
 /* education style */
@@ -154,102 +154,99 @@ q .about-destriction {
 }
 
 .edication-name {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 20px;
-	color: #fb6d3a;
-	margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fb6d3a;
+  margin-bottom: 10px;
 }
 .profi {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 17px;
-	color: #000000;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 1.2;
+  color: #000000;
 }
 .peroid {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 15px;
-	color: #a8a8a8;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.25;
+  color: #a8a8a8;
 }
 
 /* sidebar style */
 .sidebar {
-	background: #1e2939;
-	padding-top: 50px;
-	width: 370px;
-	height: 1250px;
+  background: #1e2939;
+  padding-top: 50px;
+  width: 370px;
+  height: 1250px;
 }
 
 .photo {
-	width: 370px;
-	margin-bottom: 40px;
+  width: 370px;
+  margin-bottom: 40px;
 }
 .sidebar-tittle {
-	color: #ffffff;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 22px;
-	line-height: 27px;
-	margin-bottom: 10px;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+  margin-bottom: 10px;
 }
 .contacts,
 .tech-skills,
 .soft-skills {
-	margin-left: 40px;
+  margin-left: 40px;
 }
 
 .contacts {
-	margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .contact-teg {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 24px;
-	color: white;
-	margin-right: 5px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  color: white;
+  margin-right: 5px;
 }
 
 .contact-link {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	color: #b5c0d3;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #b5c0d3;
 }
 
 .tech-skills-list {
-	color: white;
-	padding: 0px;
-	margin-left: 15px;
+  color: white;
+  padding: 0px;
+  margin-left: 15px;
 }
 .soft-skils-list {
-	color: white;
-	padding: 0px;
-	margin-left: 15px;
+  color: white;
+  padding: 0px;
+  margin-left: 15px;
 }
 .tech-skills-icon {
-	color: orangered;
+  color: orangered;
 }
 .tech-skills-tegs {
-	color: white;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
+  color: white;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
 }
 .soft-skilld-icon {
-	color: orangered;
+  color: orangered;
 }
 .soft-skills-tegs {
-	color: white;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
+  color: white;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
 }
